--- a/MyWebApplication/appsettings.json
+++ b/MyWebApplication/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MyWebApplication-9B44BBB2-2EB2-44E8-909E-BA62D78D55D3;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "UserSettings": {
+    "UserEmail": "chenyu.zhao@jadetours.com",
+    "UserPassword": "$N5]ChcN"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
